# sec-suite

./: .gitignore  README.md  cli.py  hex_table_5k.pkl  infos.md  interactive_cli.py  main.py  pyproject.toml  requirements.txt  run.py
attacks/: bruteforce.py  dictionary.py  dvwa_braker.py  markov.py  password_generator.py  rainbow.py
tools/: encoder.py  keylogger.py  network_scanner.py
utils/: banner.py  crypto.py  data_downloader.py  password_analyzer.py
