[project]
name = "sec-suite"
version = "2.0.0"
description = "A suite of security tools for penetration testing and vulnerability assessment."
authors = [
    {name = "Gabriel Windlin",email = "gawindlin@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scapy==2.7.0; python_version >= '3.7' and python_version < '4.0'",
    "bcrypt (>=5.0.0,<6.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
